--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -11,14 +11,12 @@
 </section>
 
 <section
-  class="h-screen w-full flex gap-16 justify-center items-center mx-auto"
+  class="w-full h-full flex flex-col md:flex-row gap-16 justify-center items-center pt-16"
   id="main2"
 >
-  <div class="w-[40%]">
+  <div class="w-[70%] md:w-[30%]">
     <hr class="bg-secondary text-secondary h-2 w-[80px] opacity-30" />
-    <h1
-      class="text-2xl sm:text-2xl md:text-4xl lg:text-7xl text-secondary font-extrabold my-10"
-    >
+    <h1 class="text-4xl lg:text-7xl text-secondary font-extrabold my-10">
       Let's Build Your Dreams!
     </h1>
     <p class="text-secondary text-base md:text-xl">
@@ -27,20 +25,79 @@
       recusandae mollitia assumenda, vel impedit ea magni fugit aut ab.
     </p>
   </div>
-  <div class="w-[40%]">
+  <div class="w-[70%] md:w-[30%]">
     <form action="" class="bg-secondary p-10">
-      <div class="flex flex-col">
-        <div class="flex flex-col">
-          <label for="" class="text-[#808080e3] text-xl font-bold">Name</label
-          ><span class="text-[red]">*</span>
-          <br />
-          <input type="text" class="bg-secondary border h-14 w-64" />
-          <br />
-          <label class="text-[#808080e3] text-lg font-semibold" for=""
+      <div class="flex flex-row gap-7">
+        <div class="flex flex-col w-[45%] md:w-1/2">
+          <div class="flex items-center">
+            <label for="" class="text-[#808080e3] text-base font-semibold"
+              >Name</label
+            ><span class="text-[red] ml-1">*</span>
+          </div>
+
+          <input
+            type="text"
+            class="bg-[#80808013] border h-12 px-4"
+            style="border-color: rgba(128, 128, 128, 0.834)"
+          />
+
+          <label class="text-[#808080e3] text-base font-semibold" for=""
             >First</label
           >
         </div>
+        <div class="flex flex-col w-[45%] md:w-1/2">
+          <div class="flex items-center">
+            <label
+              for=""
+              class="text-[#808080e3] text-base opacity-0 font-semibold"
+              >Last</label
+            ><span class="text-[red] ml-1 opacity-0">*</span>
+          </div>
+
+          <input
+            type="text"
+            class="bg-[#80808013] border h-12 px-4"
+            style="border-color: rgba(128, 128, 128, 0.834)"
+          />
+
+          <label class="text-[#808080e3] text-base font-semibold" for=""
+            >Last</label
+          >
+        </div>
       </div>
+
+      <div class="flex flex-col mt-5">
+        <div class="flex items-center">
+          <label for="" class="text-[#808080e3] text-base font-semibold"
+            >Email </label
+          ><span class="text-[red] ml-1">*</span>
+        </div>
+
+        <input
+          type="text"
+          class="bg-[#80808013] border h-12 px-4"
+          style="border-color: rgba(128, 128, 128, 0.834)"
+        />
+      </div>
+      <div class="flex flex-col mt-5">
+        <div class="flex items-center">
+          <label for="" class="text-[#808080e3] text-base font-semibold"
+            >Comment or Message </label
+          ><span class="text-[red] ml-1">*</span>
+        </div>
+
+        <textarea
+          name=""
+          id=""
+          class="bg-[#80808013] border h-36 px-2 py-2"
+          style="border-color: rgba(128, 128, 128, 0.834)"
+        ></textarea>
+      </div>
+      <button
+        class="w-52 h-14 mt-4 font-semibold text-lg bg-accent text-secondary"
+      >
+        SUBMIT
+      </button>
     </form>
   </div>
 </section>
