--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,391 @@
-<p>contact works!</p>
+<section
+  class="w-screen px-10 md:px-40 h-screen flex flex-col justify-center items-start"
+  id="main1"
+>
+  <hr class="bg-secondary text-secondary h-1 w-[80px] opacity-30" />
+  <h1
+    class="text-5xl sm:text-5xl md:text-7xl lg:text-8xl text-secondary font-extrabold my-10"
+  >
+    Contact
+  </h1>
+</section>
+<section
+  class="w-full md:h-3/4 flex flex-col md:flex-row gap-16 justify-center items-center pt-2 md:pt5 lg:pt-16 mt-24 md:mt-5"
+  id="main2"
+>
+  <div class="w-[70%] md:w-[30%]">
+    <h1 class="pl-10 text-3xl font-extrabold text-primary">Get in Touch</h1>
+    <hr class="bg-accent text-accent h-1.5 w-[80px] ml-10 mt-3" />
+    <div class="flex flex-col mt-10">
+      <h3 class="ml-10 text-mygray text-base opacity-50 font-extrabold">
+        Phone
+      </h3>
+      <h1 class="ml-10 text-primary text-2xl font-extrabold">929-242-6868</h1>
+      <hr class="bg-mygray text-mygray opacity-30 h-1.5 w-[40px] ml-10 mt-3" />
+    </div>
+    <div class="flex flex-col mt-10">
+      <h3 class="ml-10 text-mygray text-base opacity-50 font-extrabold">
+        E-Mail
+      </h3>
+      <h1 class="ml-10 text-primary text-2xl font-extrabold">
+        contactinfo.com
+      </h1>
+      <hr class="bg-mygray text-mygray opacity-30 h-1.5 w-[40px] ml-10 mt-3" />
+    </div>
+    <div class="flex flex-col mt-10">
+      <h3 class="ml-10 text-mygray text-base opacity-50 font-extrabold">
+        Address
+      </h3>
+      <h1 class="ml-10 text-primary text-2xl font-extrabold">
+        123 Fifth Avenue, New York, NY 10160
+      </h1>
+      <hr class="bg-mygray text-mygray opacity-30 h-1.5 w-[40px] ml-10 mt-3" />
+    </div>
+    <div class="flex flex-col mt-10 mb-10">
+      <h3 class="ml-10 text-mygray text-base opacity-50 font-extrabold">
+        Keep in Touch
+      </h3>
+      <div class="ml-10 mt-2 flex gap-3">
+        <svg
+          class="w-6 h-6"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 512 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3998"
+            d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
+          />
+        </svg>
+
+        <svg
+          class="w-6 h-6"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 512 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3990"
+            d="M459.4 151.7c.3 4.5 .3 9.1 .3 13.6 0 138.7-105.6 298.6-298.6 298.6-59.5 0-114.7-17.2-161.1-47.1 8.4 1 16.6 1.3 25.3 1.3 49.1 0 94.2-16.6 130.3-44.8-46.1-1-84.8-31.2-98.1-72.8 6.5 1 13 1.6 19.8 1.6 9.4 0 18.8-1.3 27.6-3.6-48.1-9.7-84.1-52-84.1-103v-1.3c14 7.8 30.2 12.7 47.4 13.3-28.3-18.8-46.8-51-46.8-87.4 0-19.5 5.2-37.4 14.3-53 51.7 63.7 129.3 105.3 216.4 109.8-1.6-7.8-2.6-15.9-2.6-24 0-57.8 46.8-104.9 104.9-104.9 30.2 0 57.5 12.7 76.7 33.1 23.7-4.5 46.5-13.3 66.6-25.3-7.8 24.4-24.4 44.8-46.1 57.8 21.1-2.3 41.6-8.1 60.4-16.2-14.3 20.8-32.2 39.3-52.6 54.3z"
+          />
+        </svg>
+
+        <svg
+          class="w-6 h-6"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3998"
+            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+          />
+        </svg>
+        <svg
+          class="w-6 h-6"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3990"
+            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
+          />
+        </svg>
+      </div>
+      <hr class="bg-mygray text-mygray opacity-30 h-1.5 w-[40px] ml-10 mt-3" />
+    </div>
+  </div>
+  <div class="w-[70%] md:w-[30%]">
+    <h1 class="pl-10 text-4xl font-extrabold text-primary">Message Us</h1>
+    <hr class="bg-accent text-accent h-1.5 w-[80px] ml-10 mt-3" />
+    <form action="" class="bg-[white] pt-7 px-10 pb-10">
+      <div class="flex flex-row gap-7">
+        <div class="flex flex-col w-[45%] md:w-1/2">
+          <div class="flex items-center">
+            <label for="" class="text-[#808080e3] text-base font-semibold"
+              >Name</label
+            ><span class="text-[red] ml-1">*</span>
+          </div>
+
+          <input
+            type="text"
+            class="bg-[#80808013] border h-12 px-4"
+            style="border-color: rgba(128, 128, 128, 0.834)"
+          />
+
+          <label class="text-[#808080e3] text-base font-semibold" for=""
+            >First</label
+          >
+        </div>
+        <div class="flex flex-col w-[45%] md:w-1/2">
+          <div class="flex items-center">
+            <label
+              for=""
+              class="text-[#808080e3] text-base opacity-0 font-semibold"
+              >Last</label
+            ><span class="text-[red] ml-1 opacity-0">*</span>
+          </div>
+
+          <input
+            type="text"
+            class="bg-[#80808013] border h-12 px-4"
+            style="border-color: rgba(128, 128, 128, 0.834)"
+          />
+
+          <label class="text-[#808080e3] text-base font-semibold" for=""
+            >Last</label
+          >
+        </div>
+      </div>
+
+      <div class="flex flex-col mt-5">
+        <div class="flex items-center">
+          <label for="" class="text-[#808080e3] text-base font-semibold"
+            >Email </label
+          ><span class="text-[red] ml-1">*</span>
+        </div>
+
+        <input
+          type="text"
+          class="bg-[#80808013] border h-12 px-4"
+          style="border-color: rgba(128, 128, 128, 0.834)"
+        />
+      </div>
+      <div class="flex flex-col mt-5">
+        <div class="flex items-center">
+          <label for="" class="text-[#808080e3] text-base font-semibold"
+            >Comment or Message </label
+          ><span class="text-[red] ml-1">*</span>
+        </div>
+
+        <textarea
+          name=""
+          id=""
+          class="bg-[#80808013] border h-36 px-2 py-2"
+          style="border-color: rgba(128, 128, 128, 0.834)"
+        ></textarea>
+      </div>
+      <button
+        class="w-52 h-14 mt-4 font-semibold text-lg bg-accent text-secondary"
+      >
+        SUBMIT
+      </button>
+    </form>
+  </div>
+</section>
+
+<iframe
+  class="w-full h-[400px] md:h-[500px]"
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30514.055501673178!2d75.18130530590219!3d17.060080238836786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc6c694a678842d%3A0x2493dfac6957edd6!2sJath%2C%20Maharashtra%20416404!5e0!3m2!1sen!2sin!4v1724863103844!5m2!1sen!2sin"
+  width="600"
+  height="450"
+  style="border: 0"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade"
+></iframe>
+
+<footer class="w-full bg-primary">
+  <section class="w-full bg-[#071C4A] h-[1240px] lg:h-[640px] top-[-420px]">
+    <section
+      class="container mx-auto flex flex-col gap-10 md:gap-0 lg:flex-row pt-24"
+    >
+      <div class="basis-1/4 pl-4 md:pl-0">
+        <img src="../../assets/images/main-logo.png" alt="" />
+        <div class="flex flex-col justify-center">
+          <div class="flex justify-start mt-10">
+            <svg
+              class="w-[25px] h-[25px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
+              />
+            </svg>
+            <span class="text-secondary text-xl font-semibold ml-4"
+              >929-242-6868</span
+            >
+          </div>
+          <div class="flex justify-start mt-7">
+            <svg
+              class="w-[25px] h-[25px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
+              />
+            </svg>
+            <span class="text-secondary text-xl font-semibold ml-4"
+              >contact&#64;info.com</span
+            >
+          </div>
+          <div class="flex justify-start mt-7">
+            <svg
+              class="w-[25px] h-[25px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 320 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M16 144a144 144 0 1 1 288 0A144 144 0 1 1 16 144zM160 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96c0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zM128 480l0-162.9c10.4 1.9 21.1 2.9 32 2.9s21.6-1 32-2.9L192 480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
+              />
+            </svg>
+            <span class="text-secondary text-xl w-56 font-semibold ml-4"
+              >123 Fifth Avenue, New York, NY 10160</span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="basis-1/4 pl-4 px-16 mt-10 lg:mt-0">
+        <h1
+          class="text-xl font-extrabold text-secondary my-2"
+          style="z-index: 1"
+        >
+          Our Services
+        </h1>
+        <div id="underLine1" class="w-[100%] h-[25px]"></div>
+
+        <ul class="flex-col justify-evenly items-center">
+          <li
+            class="flex justify-start items-center border-b-[#ffffff4a] border-b py-2 mb-2"
+          >
+            <svg
+              class="w-[15px] h-[15px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
+              />
+            </svg>
+            <span class="text-lg font-semibold text-secondary ml-6">
+              General Contract</span
+            >
+          </li>
+          <li
+            class="flex justify-start items-center border-b-[#ffffff4a] border-b py-2 mb-2"
+          >
+            <svg
+              class="w-[15px] h-[15px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
+              />
+            </svg>
+            <span class="text-lg font-semibold text-secondary ml-6">
+              Project Planning</span
+            >
+          </li>
+          <li
+            class="flex justify-start items-center border-b-[#ffffff4a] border-b py-2 mb-2"
+          >
+            <svg
+              class="w-[15px] h-[15px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
+              />
+            </svg>
+            <span class="text-lg font-semibold text-secondary ml-6">
+              House Refurbishment</span
+            >
+          </li>
+          <li
+            class="flex justify-start items-center border-b-[#ffffff4a] border-b py-2 mb-2"
+          >
+            <svg
+              class="w-[15px] h-[15px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
+              />
+            </svg>
+            <span class="text-lg font-semibold text-secondary ml-6">
+              Kicten Remodeling</span
+            >
+          </li>
+          <li class="flex justify-start items-center py-2 mb-2">
+            <svg
+              class="w-[15px] h-[15px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
+              />
+            </svg>
+            <span class="text-lg font-semibold text-secondary ml-6">
+              Interior Design</span
+            >
+          </li>
+          <li class="flex justify-start items-center py-2 mb-2">
+            <svg
+              class="w-[15px] h-[15px]"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                fill="#ffbc01"
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
+              />
+            </svg>
+            <span class="text-lg font-semibold text-secondary ml-6">
+              House Extension</span
+            >
+          </li>
+        </ul>
+      </div>
+
+      <div class="basis-1 lg:basis-1/2 pr-36 mt-10 lg:mt-0 pl-4">
+        <h1
+          class="text-xl font-extrabold text-secondary my-2"
+          style="z-index: 1"
+        >
+          A Few Words About Us
+        </h1>
+        <div id="underLine1" class="w-[100%] h-[25px]"></div>
+
+        <p class="font-semibold text-secondary mt-0 md:text-base text-xs">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+          accusantium doloremque laudantium, totam rem aperiam.
+        </p>
+        <div class="flex gap-3 h-10 md:h-20 mt-8 lg:mt-4">
+          <img src="../../assets/images/button icons/bbb-logo.png" alt="" />
+          <img src="../../assets/images/button icons/houzz-2019.png" alt="" />
+          <img src="../../assets/images/button icons/top-modeller.png" alt="" />
+          <img src="../../assets/images/button icons/yelp-love.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <div
+      class="bg-[#0d2d71] h-[60px] md:h-[100px] md:leading-[60px] text-center w-full text-secondary text-xs md:text-xl mt-[40px] px-10 pt-3"
+    >
+      Copyright © 2024 Construction | Powered by Construction
+    </div>
+  </section>
+</footer>
